--- a/scripts/run_once_03_install_zsh.sh.tmpl
+++ b/scripts/run_once_03_install_zsh.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-## zinit 
+## zinit インストール
 bash -c "$(curl --fail --show-error --silent --location https://raw.githubusercontent.com/zdharma-continuum/zinit/HEAD/scripts/install.sh)"
 
 ## starship
