--- a/scripts/run_once_02_install_vim.sh.tmpl
+++ b/scripts/run_once_02_install_vim.sh.tmpl
@@ -1,3 +1,6 @@
 #!/bin/bash
 
-# TODO: SpaceVim が deprecated になってインストールできなくなってたので LazyVim にかえる
+rm -rf ~/.config/nvim
+git clone --depth 1 https://github.com/AstroNvim/template ~/.config/nvim
+rm -rf ~/.config/nvim/.git
+
