--- a/scripts/run_once_03_install_zsh.sh.tmpl
+++ b/scripts/run_once_03_install_zsh.sh.tmpl
@@ -1,8 +1,12 @@
 #!/bin/bash
 
-## zinit インストール
-bash -c "$(curl --fail --show-error --silent --location https://raw.githubusercontent.com/zdharma-continuum/zinit/HEAD/scripts/install.sh)"
 
-## starship
-curl -sS https://starship.rs/install.sh | sh -s -- -y
+# CI で重い処理をしないように分岐
+if [[ "${CI:-false}" == "false" ]]; then
+  ## zinit インストール
+  bash -c "$(curl --fail --show-error --silent --location https://raw.githubusercontent.com/zdharma-continuum/zinit/HEAD/scripts/install.sh)"
+
+  ## starship
+  curl -sS https://starship.rs/install.sh | sh -s -- -y
+fi
 
